# apod_desktopv2

./: .gitignore  Cargo.toml  Makefile  README.md  apod.service  config
src/: config.rs  lib.rs  main.rs  response.rs
systemd/: sid-bg.service  sid-bg.timer
