[package]
name = "sid-bg"
version = "0.1.2"
edition = "2024"

[target.x86_64-unknown-linux-gnu]
rustflags = ["-Clink-arg=-Wl,--no-rosegment"]

[dependencies]
anyhow = "1"
little_exif = "0.6.23"
log = "0.4.32"
miniserde = { version = "0.1.45" }
pico-args = "0.5.0"
simple_logger = { version = "5.2.0", default-features = false} 
ureq = { version = "3.1.4" } 
xdg = "3.0.0"
